--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-{% load static %}
+<!DOCTYPE html> {% load static %}
 <html lang="en">
+
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3G9YHKMP5Y"></script>
     <script>
@@ -80,6 +80,7 @@
                                                                                 
                                                                             
     -->
+
 <body>
     <img id="topo-left" src="{% static 'portfolio/imgs/topoL.svg' %}" alt="">
     <img id="topo-right" src="{% static 'portfolio/imgs/topoR.svg' %}" alt="">
@@ -101,15 +102,15 @@
 
 
     <div id="intro-wrapper">
-        
+
         <h1 id="main-word">SOFTWARE</h1>
         <img id="headshot-img" src="{% static 'portfolio/imgs/gagehead.png' %}" alt="headphoto">
         <h1 id="developer">DEVELOPER</h1>
         <h4 id="myname">Hey, Im <span style="color:rgb(144, 221, 144);">Gage Lieble</span></h4>
     </div>
-    
+
     <div id="about-wrapper">
-        
+
         <h1 id="about-head">WHO AM I?</h1>
         <div id="sentences">
             <p>I was born in the City of Roses, Portland OR.</p>
@@ -119,56 +120,57 @@
             <p>In middle school I created my first website. That website was developed using HTML and CSS exclusively which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
             <p>My programming abilities have definitely improved since then and I am glad to make my childhood passion into a reality!</p>
             <p style="text-align:center"><span style="color:rgb(144, 221, 144);">some</span> of my tech knowlege</p>
-            
+
         </div>
-        </div><div id="languages"><img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/javascript.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/git.svg' %}" alt="">
+    </div>
+    <div id="languages"><img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
+        <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
+        <img src="{% static 'portfolio/imgs/javascript.svg' %}" alt="">
+        <img src="{% static 'portfolio/imgs/git.svg' %}" alt="">
     </div>
 
-<h1 id="work-head">IVE BUILT</h1>
+    <h1 id="work-head">IVE BUILT</h1>
     <div id="work-wrapper">
-        
+
         <div>
-        <div class="site-wrap">
-            <img class="work-logo" src="{% static 'portfolio/imgs/qrlogo.svg' %}" alt="qrlogo">
-            <img class="work-img" src="{% static 'portfolio/imgs/qrscreen.jpg' %}" alt="qrscreen">
-        </div>
-        <div class="work-links"><a class="qr-links" href="https://github.com/Gage-Lieble/QrPixel">Github ></a><a class="qr-links" href="http://qrpixel.herokuapp.com/">QrPixel ></a></div>
-        <div id="work-languages">
-            <img src="{% static 'portfolio/imgs/javascript.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
+            <div class="site-wrap">
+                <img class="work-logo" src="{% static 'portfolio/imgs/qrlogo.svg' %}" alt="qrlogo">
+                <img class="work-img" src="{% static 'portfolio/imgs/qrscreen.jpg' %}" alt="qrscreen">
+            </div>
+            <div class="work-links"><a class="qr-links" href="https://github.com/Gage-Lieble/QrPixel">Github ></a><a class="qr-links" href="http://qrpixel.herokuapp.com/">QrPixel ></a></div>
+            <div id="work-languages">
+                <img src="{% static 'portfolio/imgs/javascript.svg' %}" alt="">
+                <img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
+                <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
             </div>
         </div>
         <div>
-        <div class="site-wrap">
-            <img id="dream-logo" class="work-logo" src="{% static 'portfolio/imgs/dreamstreamlogo.svg' %}" alt="dreamlogo">
-            <img class="work-img" src="{% static 'portfolio/imgs/dreamstreamscreen.jpg' %}" alt="dreamscreen">
-        </div>
-        <div class="work-links"><a class="dream-links" href="https://github.com/Gage-Lieble/DreamStream">Github ></a><a class="dream-links" href="https://dream-stream-capstone.herokuapp.com/">DreamStream ></a></div>
-        <div id="work-languages">
-            <img src="{% static 'portfolio/imgs/javascript.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
+            <div class="site-wrap">
+                <img id="dream-logo" class="work-logo" src="{% static 'portfolio/imgs/dreamstreamlogo.svg' %}" alt="dreamlogo">
+                <img class="work-img" src="{% static 'portfolio/imgs/dreamstreamscreen.jpg' %}" alt="dreamscreen">
+            </div>
+            <div class="work-links"><a class="dream-links" href="https://github.com/Gage-Lieble/DreamStream">Github ></a><a class="dream-links" href="https://dream-stream-capstone.herokuapp.com/">DreamStream ></a></div>
+            <div id="work-languages">
+                <img src="{% static 'portfolio/imgs/javascript.svg' %}" alt="">
+                <img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
+                <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
             </div>
         </div>
 
         <div>
-        <div class="site-wrap">
-            <img id="weather-logo" class="work-logo" src="{% static 'portfolio/imgs/weatherlogo.svg' %}" alt="weatherlogo">
-            <img class="work-img" src="{% static 'portfolio/imgs/weatherscreen.jpg' %}" alt="weatherscreen">
-        </div>
-        <div class="work-links"><a class="weather-links" href="https://github.com/Gage-Lieble/APIweatherapp">Github ></a><a class="weather-links" href="https://gagelieble.com/weather/g/">Weather ></a></div>
-        <div id="work-languages">
-            <img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
-            <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
+            <div class="site-wrap">
+                <img id="weather-logo" class="work-logo" src="{% static 'portfolio/imgs/weatherlogo.svg' %}" alt="weatherlogo">
+                <img class="work-img" src="{% static 'portfolio/imgs/weatherscreen.jpg' %}" alt="weatherscreen">
+            </div>
+            <div class="work-links"><a class="weather-links" href="https://github.com/Gage-Lieble/APIweatherapp">Github ></a><a class="weather-links" href="https://gagelieble.com/weather/g/">Weather ></a></div>
+            <div id="work-languages">
+                <img src="{% static 'portfolio/imgs/django.svg' %}" alt="">
+                <img src="{% static 'portfolio/imgs/python.svg' %}" alt="">
             </div>
         </div>
-    </div> 
-    
-    
+    </div>
+
+
 
 
 
@@ -176,52 +178,52 @@
         <h1 id="edu-head">EDUCATION</h1>
         <h2 id="pdxcode-title">PDX CODE GUILD <img id="guild-logo" src="{% static 'portfolio/imgs/guildlogo.svg' %}" alt=""></h2>
         <div id="clock-section">
-            
-        <div id="clock-outline"><img src="{% static 'portfolio/imgs/clockdots.svg' %}" alt=""><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span></div>
-        <div id="time-tags">
-        <h2 style='margin-left: -25px;' class="edu-taglines">Is a</h2>
-        <h2 class="edu-taglines">500+ hour</h2>
-        <h2 class="edu-taglines">16 week</h2>
-        <h2 style='margin-left: -25px;' class="edu-taglines">Course</h2>
-    </div>
-    </div>
-    <div id="teaches-section">
-    <h2 class="edu-taglines">That teaches . . .</h2>
 
-        <div class="teachsub-section">
-            <h2 class="edu-taglines">Various Frameworks</h2>
-            <div id="frameworklogo-wrap">
-                <img src="{% static 'portfolio/imgs/frameworklogos.svg' %}" alt="">
+            <div id="clock-outline"><img src="{% static 'portfolio/imgs/clockdots.svg' %}" alt=""><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span></div>
+            <div id="time-tags">
+                <h2 style='margin-left: -25px;' class="edu-taglines">Is a</h2>
+                <h2 class="edu-taglines">500+ hour</h2>
+                <h2 class="edu-taglines">16 week</h2>
+                <h2 style='margin-left: -25px;' class="edu-taglines">Course</h2>
             </div>
-            <h3 class="frameworks">Django</h3>
-            <h3 class="frameworks">Vue.js</h3>
-            <h3 class="frameworks">Django Rest</h3>
-            <h3 class="frameworks">Flask</h3>
-            
         </div>
+        <div id="teaches-section">
+            <h2 class="edu-taglines">That teaches . . .</h2>
 
-        <div class="teachsub-section align-start">
-            <h2 class="edu-taglines">Programming Languages</h2>
-            <div id="programminglogo-wrap">
-                <img src="{% static 'portfolio/imgs/programminglogos.svg' %}" alt="">
+            <div class="teachsub-section">
+                <h2 class="edu-taglines">Various Frameworks</h2>
+                <div id="frameworklogo-wrap">
+                    <img src="{% static 'portfolio/imgs/frameworklogos.svg' %}" alt="">
+                </div>
+                <h3 class="frameworks">Django</h3>
+                <h3 class="frameworks">Vue.js</h3>
+                <h3 class="frameworks">Django Rest</h3>
+                <h3 class="frameworks">Flask</h3>
+
             </div>
-            <h3 class="frameworks">Python</h3>
-            <h3 class="frameworks">Javascript</h3>
-            <h3 class="frameworks">Html</h3>
-            <h3 class="frameworks">Css</h3>
-        </div>
 
-        <div class="teachsub-section" id="tech-tools">
-            <h2 class="edu-taglines">Technical Tools</h2>
-            <h3 class="frameworks">SQL</h3>
-            <h3 class="frameworks">REST API</h3>
-            <h3 class="frameworks">Github</h3>
-            <h3 class="frameworks">Pip Packages</h3>
-            
-        </div>
+            <div class="teachsub-section align-start">
+                <h2 class="edu-taglines">Programming Languages</h2>
+                <div id="programminglogo-wrap">
+                    <img src="{% static 'portfolio/imgs/programminglogos.svg' %}" alt="">
+                </div>
+                <h3 class="frameworks">Python</h3>
+                <h3 class="frameworks">Javascript</h3>
+                <h3 class="frameworks">Html</h3>
+                <h3 class="frameworks">Css</h3>
+            </div>
 
-        
-</div>
+            <div class="teachsub-section" id="tech-tools">
+                <h2 class="edu-taglines">Technical Tools</h2>
+                <h3 class="frameworks">SQL</h3>
+                <h3 class="frameworks">REST API</h3>
+                <h3 class="frameworks">Github</h3>
+                <h3 class="frameworks">Pip Packages</h3>
+
+            </div>
+
+
+        </div>
     </div>
 
     <div id="graduated-section">
@@ -229,18 +231,18 @@
         <img id="cert-img" src="{% static 'portfolio/imgs/cert.jpg' %}" alt="cert">
         <div id="cert-title">PDX Code Guild Certification</div>
         <a id="resume-link" href="{% static 'portfolio/imgs/GageLiebleResume8-27.pdf' %}">My Resume ></a>
-        
+
     </div>
-    
+
     <div id="reachout-section">
         <img id="topo-reach-left" src="{% static 'portfolio/imgs/topoL.svg' %}" alt="">
         <img id="topo-reach-right" src="{% static 'portfolio/imgs/topoR.svg' %}" alt="">
         <h1>REACH OUT!</h1>
         <h2 style="font-size:30px">gagelieble@hotmail.com</h2>
         <div id="reach-links">
-            
+
             <a class='reach-btns' href="https://www.linkedin.com/in/gage-lieble-954076229">Linkedin ></a>
-            
+
             <a class='reach-btns' href="https://github.com/Gage-Lieble">Github ></a>
         </div>
     </div>
@@ -249,4 +251,5 @@
         copyright &copy; 2022 gage lieble
     </div>
 </body>
+
 </html>
