Added clock center

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -179,7 +179,7 @@
         <h2 id="pdxcode-title">PDX CODE GUILD <img id="guild-logo" src="{% static 'portfolio/imgs/guildlogo.svg' %}" alt=""></h2>
         <div id="clock-section">
 
-            <div id="clock-outline"><img src="{% static 'portfolio/imgs/clockdots.svg' %}" alt=""><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span></div>
+            <div id="clock-outline"><img src="{% static 'portfolio/imgs/clockdots.svg' %}" alt=""><span id="mid-circle"></span><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span></div>
             <div id="time-tags">
                 <h2 style='margin-left: -25px;' class="edu-taglines">Is a</h2>
                 <h2 class="edu-taglines">500+ hour</h2>
