Email link added

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -238,7 +238,7 @@
         <img id="topo-reach-left" src="{% static 'portfolio/imgs/topoL.svg' %}" alt="">
         <img id="topo-reach-right" src="{% static 'portfolio/imgs/topoR.svg' %}" alt="">
         <h1>REACH OUT!</h1>
-        <h2 style="font-size:30px">gagelieble@hotmail.com</h2>
+        <h2 style="font-size:30px"> <a href="mailto:gagelieble@hotmail.com" style="color:#72C162">gagelieble@hotmail.com</a> </h2>
         <div id="reach-links">
 
             <a class='reach-btns' href="https://www.linkedin.com/in/gage-lieble-954076229">Linkedin ></a>
